--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url(/calculadora-imc/img/background.jpg);
+    background-image: url(https://ibb.co/X5Q5XJc);
     background-size: 100%;
     background-position: center;
 }
